# Integer-Schemes

./: .gitignore  .rsyncignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  run_locked.sh  run_tests.sh  sync.sh
2D/: params.toml  pyproject.toml
2D/src/mcs2d/: __init__.py  benchmark.py  compact_stability.py  main.py  msrk.py  msrk_analysis.py  profile.py  profile_amr.py  profile_ozaki.py  profile_regime.py  tiling_model.py  validate.py  visualize.py
2D/tests/: conftest.py  run.sh
2D/tests/integration/: test_amr_constraints.py  test_amr_evolve.py  test_amr_multiblock.py  test_amr_n_level.py  test_amr_restriction.py  test_amr_subcycling.py  test_amr_tracking.py  test_msrk.py  test_simulation.py
2D/tests/regression/: test_amr_convergence.py  test_amr_vs_fused.py  test_long_term_stability.py  test_no_recompile.py
2D/tests/unit/: test_amr_calibration.py  test_amr_kernels.py  test_amr_regrid.py  test_fused_rhs.py  test_ozaki.py
2D/tests/validation/: test_boundaries.py  test_constraints.py  test_convergence.py  test_spectrum.py
3D/: params.toml  pyproject.toml
3D/src/bssn3d/: __init__.py  _bssn_rhs_fused.py  _bssn_rhs_fused_fp64.py  _bssn_rhs_fused_tiled.py  _bssn_rhs_generated.py  _bssn_rhs_pallas.py  _bssn_rhs_staged.py  _codegen.py  _codegen_constraints.py  _constraints_generated.py  apples_gate.py  compression_accuracy.py  compression_model.py  compression_traffic_model.py  constraints.py  deriv_2p5d_ref.py  deriv_kernel.py  derivative_bundle.py  egraph_costfn.py  egraph_probe.py  evolve.py  ffi_add.py  fused_backend.py  fused_cost_model.py  fused_fp64_backend.py  fused_peak_model.py  fused_rhs_cuda.py  fused_tiled_backend.py  fusion_level_model.py  gpu_profiles.py  grid.py  initial_data.py  liveness.py  longrun_stability.py  msrk_spectrum.py  oracle.py  pallas_backend.py  pallas_smoke.py  probe_overlap_load.py  profile_deriv.py  (+8 more)
3D/src/mcs3d/: __init__.py  benchmark.py  comparison.py  compression_emulator.py  main.py  validate.py
3D/src/multipatch/: __init__.py  atlas.py  coord_maps.py  derivative_curvilinear.py  evolve.py  mcs_multipatch.py  overlap.py  validate.py  wave.py
3D/tests/: conftest.py  run.sh
3D/tests/integration/: test_bssn_apples.py  (+16 more)
common/: pyproject.toml
(+118 files in other folders)
