[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcs2d"
version = "0.2.0"
description = "2D Maxwell-Chern-Simons solver — multiple integer/float schemes + AMR."
# Pinned to JAX 0.9.2.  The Pallas-Triton `pallas_ozaki` kernel is written for the
# 0.9.x Triton lowering: pow2 tile padding (MCS_PALLAS_PAD_POW2, auto-on for GPU)
# and STATIC indexing/slicing (0.9.x implements lax.slice; dynamic_slice is the one
# that fails on the older 0.8.1 Triton).
dependencies = [
    "jax == 0.9.2",
    "numpy",
    "h5py",
    "matplotlib",
    "mcs-common",
]

[project.optional-dependencies]
gpu = ["jax[cuda12] == 0.9.2"]
dev = ["pytest>=8", "pytest-xdist"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take longer than ~5 s",
    "gpu: requires a real GPU (skipped on CPU-only CI)",
    "amr: AMR-specific tests",
    "regression: regression / invariant guards (no recompile, bit-identical)",
]
