[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcs-common"
version = "0.1.0"
description = "Shared utilities for the Integer-Schemes 2D and 3D MCS solvers."
dependencies = [
    "jax == 0.9.2",   # see 2D/pyproject.toml for the Pallas-Triton 0.9.x notes
    "numpy",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["src"]
